--- a/donate.html
+++ b/donate.html
@@ -22,7 +22,7 @@
   <main class="page">
     <h1>Donate</h1>
     <p class="page-subtitle">
-      Choose a child and make their Christmas magical.
+      Become a secret santa!
     </p>
 
     <!-- Example child cards for proof of concept -->
