--- a/mission.html
+++ b/mission.html
@@ -28,9 +28,8 @@
       <div class="mission-video-wrapper">
         <!-- Replace the iframe src with your real video when it's ready -->
         <div class="video-placeholder">
-          <p>Your mission video will go here.</p>
           <p class="small">
-            Replace this placeholder with an embedded YouTube/Vimeo video.
+            note to self: embed mission video here later
           </p>
         </div>
         <!-- Example embed to use later:
@@ -46,17 +45,13 @@
 
       <div class="mission-text">
         <p>
-          Mission Secret Santa partners with our local homeless shelter to make
-          sure every child wakes up to a gift chosen especially for them.
+          Mission Secret Santa partners with City Light shelter to make
+          sure every child wakes up to a gift this year.
         </p>
         <p>
           Donors can browse first names, ages, and wish lists, then send gifts
           straight to the shelter. We protect each child’s privacy while still
           sharing their unique interests and hopes for Christmas morning.
-        </p>
-        <p>
-          This project is built to be simple, safe, and scalable so more kids
-          can feel seen and celebrated during the holidays.
         </p>
       </div>
     </section>
