--- a/donate.html
+++ b/donate.html
@@ -22,68 +22,12 @@
   <main class="page">
     <h1>Donate</h1>
     <p class="page-subtitle">
-      Become a secret santa!
+      Become a Secret Santa!
     </p>
 
-    <!-- Example child cards for proof of concept -->
-    <section class="children-grid">
-      <article class="child-card" data-status="available">
-        <div class="child-avatar">🎄</div>
-        <div class="child-info">
-          <h2>Aiden, Age 7</h2>
-          <p class="child-about">
-            I love building Lego sets and reading about space. I’m hoping for some building kits and a science book this year.
-          </p>
-          <a href="#" class="btn-secondary" target="_blank" rel="noopener">
-            View Amazon Wish List
-          </a>
-          <div class="child-status">
-            <span class="status-badge status-available">Available</span>
-            <button class="btn-primary sponsor-btn" type="button">
-              Sponsor this child
-            </button>
-          </div>
-        </div>
-      </article>
+     <section class="children-grid" id="children-grid">
+      </section>
 
-      <article class="child-card" data-status="available">
-        <div class="child-avatar">⭐</div>
-        <div class="child-info">
-          <h2>Mia, Age 10</h2>
-          <p class="child-about">
-            I enjoy drawing, journaling, and listening to music. I’d love art supplies and a small Bluetooth speaker.
-          </p>
-          <a href="#" class="btn-secondary" target="_blank" rel="noopener">
-            View Amazon Wish List
-          </a>
-          <div class="child-status">
-            <span class="status-badge status-available">Available</span>
-            <button class="btn-primary sponsor-btn" type="button">
-              Sponsor this child
-            </button>
-          </div>
-        </div>
-      </article>
-
-      <article class="child-card" data-status="sponsored">
-        <div class="child-avatar">🎁</div>
-        <div class="child-info">
-          <h2>Jayden, Age 5</h2>
-          <p class="child-about">
-            I like cars, dinosaurs, and anything that makes noise. I’m hoping for toy cars and dinosaur books.
-          </p>
-          <a href="#" class="btn-secondary" target="_blank" rel="noopener">
-            View Amazon Wish List
-          </a>
-          <div class="child-status">
-            <span class="status-badge status-sponsored">Sponsored</span>
-            <button class="btn-primary sponsor-btn" type="button" disabled>
-              Already sponsored
-            </button>
-          </div>
-        </div>
-      </article>
-    </section>
   </main>
 </body>
 </html>
