--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Mission Secret Santa</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="script.js" defer></script>
-  <!-- Optional: nice Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -29,21 +28,19 @@
         <div class="sled-bar"></div>
 
         <div class="bags-container">
-          <!-- Donate bag -->
           <div class="bag-card" data-target="donate.html" tabindex="0" aria-label="Go to Donate page">
             <img src="assets/bag-donate.png" alt="Red gift bag for Donate" class="bag-image" />
             <div class="bag-label">
               <h2>Donate</h2>
-              <p>Choose a child and make their Christmas magical.</p>
+              <p>Make one's Christmas wish come true</p>
             </div>
           </div>
 
-          <!-- Our Mission bag -->
           <div class="bag-card" data-target="mission.html" tabindex="0" aria-label="Go to Our Mission page">
             <img src="assets/bag-mission.png" alt="Red gift bag for Our Mission" class="bag-image" />
             <div class="bag-label">
               <h2>Our Mission</h2>
-              <p>Learn how we're spreading joy this holiday season.</p>
+              <p>Learn more</p>
             </div>
           </div>
         </div>
