adding the new information - no links yet
working on links

--- a/donate.html
+++ b/donate.html
@@ -22,7 +22,7 @@
   <main class="page">
     <h1>Donate</h1>
     <p class="page-subtitle">
-      Become a Secret Santa!
+      Become a Secret Santa! - Please note that sponsors may take up to 24 hours to be updated
     </p>
 
      <section class="children-grid" id="children-grid">
