--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
         <span class="accent">Secret Santa</span>
       </h1>
       <p class="hero-subtitle">
-        Connecting Secret Santas with kids in need this Christmas
+        Connecting Secret Santas with kids in need this Christmas right here in Boise
       </p>
+
+      <div class="partner-strip">
+    <span class="partner-text">In partnership with</span>
+    <img
+      src="assets/BRMM.png"
+      alt="Shelter Name logo"
+      class="partner-logo"
+    />
+    </div>
     </header>
 
     <main>
@@ -46,6 +55,13 @@
         </div>
       </section>
     </main>
+    <footer class="site-footer">
+      <p>
+        Boise Rescue Mission Ministries is the primary provider of homeless services in the state of Idaho, with five
+        facilities in Ada and Canyon counties. Our homeless ministry serves the men, women, and children of Treasure
+        Valley through shelter, food, addiction recovery, and much more.
+      </p>
+    </footer>
   </div>
 </body>
 </html>
