--- a/mission.html
+++ b/mission.html
@@ -27,13 +27,13 @@
 
     <section class="mission-content">
       <div class="mission-video-wrapper">
-        <!-- Replace the iframe src with your real video when it's ready -->
+        <!-- Replace the iframe src-->
         <div class="video-placeholder">
           <p class="small">
             note to self: embed mission video here later
           </p>
         </div>
-        <!-- Example embed to use later:
+        <!-- Example embed to use later
         <iframe
           src="https://www.youtube.com/embed/VIDEO_ID"
           title="Mission Secret Santa"
