added donation bar tracker to two pages, cleaned things up

--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
           </div>
         </div>
       </section>
+    <section class="goal-section">
+      <p class="goal-text">
+        Raised: $<span id="goal-amount">0</span> / $1,000 goal
+      </p>
+
+      <div class="goal-bar">
+        <div class="goal-bar-fill" id="goal-bar-fill"></div>
+      </div>
+  </section>
     </main>
     <footer class="site-footer">
       <p>
