mission video holder

--- a/mission.html
+++ b/mission.html
@@ -30,7 +30,7 @@
         <!-- Replace the iframe src-->
         <div class="video-placeholder">
           <p class="small">
-            note to self: embed mission video here later
+            loading mission video...
           </p>
         </div>
         <!-- Example embed to use later
