--- a/mission.html
+++ b/mission.html
@@ -55,7 +55,7 @@
     />
     </div>
         <p>
-          <br>Mission Secret Santa partners with the City Light shelter and the Boise Rescue Mission to make
+          <br>Mission Secret Santa partners with the Boise Rescue Mission Ministries’ City Light Home for Women and Children’s Shelter to make
           sure every child wakes up to a gift this year.<br><br> Donations are sent directly to the Mission where they are wrapped and delivered for Christmas.<br><br>Thank you for your support!
         </p>
         
