--- a/mission.html
+++ b/mission.html
@@ -27,21 +27,14 @@
 
     <section class="mission-content">
       <div class="mission-video-wrapper">
-        <!-- Replace the iframe src-->
-        <div class="video-placeholder">
-          <p class="small">
-            loading mission video...
-          </p>
-        </div>
-        <!-- Example embed to use later
         <iframe
-          src="https://www.youtube.com/embed/VIDEO_ID"
+          src="https://youtube.com/embed/oab6nYJlMTw"
           title="Mission Secret Santa"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
         </iframe>
-        -->
+       
       </div>
 
       <div class="mission-text">
