--- a/mission.html
+++ b/mission.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="favicon.png">
 </head>
 <body>
   <header class="inner-header">
@@ -28,7 +29,7 @@
     <section class="mission-content">
       <div class="mission-video-wrapper">
         <iframe
-          src="https://youtube.com/embed/oab6nYJlMTw"
+          src="https://youtube.com/vA18hfY6Mc0"
           title="Mission Secret Santa"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
