fix link to vid

--- a/mission.html
+++ b/mission.html
@@ -29,7 +29,7 @@
     <section class="mission-content">
       <div class="mission-video-wrapper">
         <iframe
-          src="https://youtube.com/vA18hfY6Mc0"
+          src="https://youtu.be/vA18hfY6Mc0"
           title="Mission Secret Santa"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
