more coming soon message

--- a/donate.html
+++ b/donate.html
@@ -23,7 +23,8 @@
   <main class="page">
     <h1>Donate</h1>
     <p class="page-subtitle">
-      Become a Secret Santa! - Please note that sponsors may take up to 24 hours to be updated
+      <!-- Become a Secret Santa! - Please note that sponsors may take up to 24 hours to be updated -->
+      Become a Secret Santa! - More coming soon!
     </p>
 
      <section class="children-grid" id="children-grid">
